Remove depreceted call to Integer class